css/style.css
/*
 * Base structure (Bootstrap Dashboard Example Code)
 */

/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}


/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}


/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a {
  color: #fff;
  background-color: #428bca;
}


/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}

.page-header {
  text-align:center;
}
/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}

/* Additional Code Below = Customized */

#mainHeading {
  color:#999;
  /*height: 50px; */
  padding: 15px 15px;
  font-size: 22px;
  line-height: 30px;
}

#dataTableBody
{
  /*display:none;*/
}

#dataTable>thead>tr>th {
  text-align:center;
  vertical-align:middle;
  font-size:12px;
}
#dataTable>tbody>tr>td {
  white-space:nowrap;
  text-align:center;
}

/* Allow submenus in dropdown */
.dropdown-submenu{
    position:relative;
}
 
.dropdown-submenu > .dropdown-menu
{
    top:0;
    left:100%;
    margin-top:-6px;
    margin-left:-1px;
    -webkit-border-radius:0 6px 6px 6px;
    -moz-border-radius:0 6px 6px 6px;
    border-radius:0 6px 6px 6px;
}
 
.dropdown-submenu:hover > .dropdown-menu{
    display:block;
}
 
.dropdown-submenu > a:after{
    display:block;
    content:" ";
    float:right;
    width:0;
    height:0;
    border-color:transparent;
    border-style:solid;
    border-width:5px 0 5px 5px;
    border-left-color:#cccccc;
    margin-top:5px;
    margin-right:-10px;
}
 
.dropdown-submenu:hover > a:after{
    border-left-color:#ffffff;
}
 
.dropdown-submenu .pull-left{
    float:none;
}
 
.dropdown-submenu.pull-left > .dropdown-menu{
    left:-100%;
    margin-left:10px;
    -webkit-border-radius:6px 0 6px 6px;
    -moz-border-radius:6px 0 6px 6px;
    border-radius:6px 0 6px 6px;
}
/*- See more at: http://firdaus.grandexa.com/2013/09/twitter-bootstrap-3-multilevel-dropdown-menu/#sthash.eG4Kcm2p.dpuf */

/* Custom styles */
.material {
  cursor:pointer;
}

.calcSetup {
  max-width:350px;
  margin:auto;
}

#dropdownMenu {
  width:165px;
  font-size:16px;
  display:block;
  margin:auto;
  margin-top: 7px;
}
#tempBox{
  width:165px;
  margin:auto;
}
#calc {
  display:block;
  margin:auto;
  margin-top:20px;
  margin-bottom:12px;
}
.small-gap {
  display:block;
  content:" ";
  margin:10px 0px;
}

.panel-heading {
  font-size:16px;
}

.formText {

}

/* Show the user the valid range of temps*/
#tempRangeDisplay {
  display:block; /* Don't show until material is selected */
  text-align:center;
  font-size:20px;
  color:#555;
  margin-bottom:16px;
  margin-top:15px;
}
#tempRange {
  font-weight:bold;
  font-size:1.1em;
}
#matSelector {
  margin-bottom:5px;
}
.dropdown-menu>li>a {
  padding: 6px 20px;
  font-size:16px;
}
#clearTable {
  float:right;
  cursor:pointer;
  color:#428BCA;
}
#clearTable:hover {
  text-decoration:underline;
}
#clearTable:active {
  color:#FF4444;
}
.selected
{
  background-color:#FF9999;
}

